--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -76,7 +76,7 @@
 			</article>
 
 			<article class="attendee">
-				<p><strong>Username:</strong> This is the text of an attendee</p>
+				<p><strong>Username:</strong> This is the text of an attendee. This is the text of an attendee. This is the text of an attendee. This is the text of an attendee. This is the text of an attendee. This is the text of an attendee. This is the text of an attendee. This is the text of an attendee. This is the text of an attendee.</p>
 			</article>
 	
 			<article class="attendee coder">
@@ -109,19 +109,18 @@
 	<section id="video-chat">
 
 		<article id="tokbox-team-1" class="baton">
-			[Baton holding Tokbox User]
+			<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="437" height="370" id="viddler_f6cb9e50"><param name="movie" value="http://www.viddler.com/player/f6cb9e50/" /><param name="allowScriptAccess" value="always" /><param name="allowFullScreen" value="true" /><embed src="http://www.viddler.com/player/f6cb9e50/" width="437" height="370" type="application/x-shockwave-flash" allowScriptAccess="always" allowFullScreen="true" name="viddler_f6cb9e50"></embed></object>
 		</article>
 
 		<article id="tokbox-team-2">
-			[Tokbox User]
+			<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="437" height="370" id="viddler_f6cb9e50"><param name="movie" value="http://www.viddler.com/player/f6cb9e50/" /><param name="allowScriptAccess" value="always" /><param name="allowFullScreen" value="true" /><embed src="http://www.viddler.com/player/f6cb9e50/" width="437" height="370" type="application/x-shockwave-flash" allowScriptAccess="always" allowFullScreen="true" name="viddler_f6cb9e50"></embed></object>
 		</article>
 
 		<article id="tokbox-team-3">
-			[Tokbox User]
+			<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="437" height="370" id="viddler_f6cb9e50"><param name="movie" value="http://www.viddler.com/player/f6cb9e50/" /><param name="allowScriptAccess" value="always" /><param name="allowFullScreen" value="true" /><embed src="http://www.viddler.com/player/f6cb9e50/" width="437" height="370" type="application/x-shockwave-flash" allowScriptAccess="always" allowFullScreen="true" name="viddler_f6cb9e50"></embed></object>
 		</article>
 
 		<article id="tokbox-team-4">
-			[Tokbox User]
 		</article>
 
 		<a href="#" class="button">Join the video chat</a>
