Started adding data to stage view

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -29,7 +29,7 @@
 
 	<section id="room">
 	
-		<h1>Room Name Goes Here</h1>
+            <h1><%= stage.name %></h1>
 		<a href="/invite" title="Invite coders to join you" class="button invite">Invite Coders</a>
 	
 		<form id="room-settings">
