--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -18,7 +18,7 @@
 		<ol>
 			<li class="profile"><a href="/profile" title="Your Account Details">Profile</a></li>
 			<li class="support"><a href="/support" title="Having Problems?">Support</a></li>
-			<li class="create-room"><a href="/create-room" title="Create a Room and Start Coding">Create a Room</a></li>
+			<li class="create-room"><a href="/stages/new" title="Create a Room and Start Coding">Create a Room</a></li>
 			<li class="login"><a href="/login" title="Create Your Account">Signup <span>or</span> Login</a></li>
 		</ol>
 	</nav>
@@ -129,30 +129,106 @@
 	
 	<section id="attendees">
 		
-		<a href="#" class="button">Request The Baton</a>
-		
-		<h1>Who's Watching</h1>
+		<h1>Who's Watching <a href="#">Request The Baton</a></h1>
 		
 		<ol>
 	
 			<li class="attendee coder owner">
-				Username
-				<a href="#" title="Interact with this Attendee">Interact with this Attendee</a>
+				Owner
+				<section class="interact" title="Interact with this Attendee">
+				  <h1>Interact with this Attendee</h1>
+  				<ul>
+  				  <li><a href="#" title="Pass [username] the baton">Pass the baton</a></li> <!-- Shown only when holding the baton, only on coders -->
+  				  <li><a href="#" title="Promote [username] to coder">Promote [username]</a></li> <!-- Shown to room owners, only no attendees -->
+  				  <li><a href="#" title="Demote [username] to attendee">Demote [username</a></li> <!-- Shown only to room owners, only on coders -->
+  				  <li><a href="#" title="Mute [username]">Mute [username]</a></li> <!-- Shown to all coders, only on attendees -->
+  				  <li><a href="#" title="Update Your Name">Update Your Username</a></li> <!-- Shown to anyone that is still using the "Guest" name -->
+  				</ul>
+  		  </section>
 			</li>
 	
 			<li class="attendee coder">
-				Username
-				<a href="#" title="Interact with this Attendee">Interact with this Attendee</a>
+				Coder
+				<section class="interact" title="Interact with this Attendee">
+				  <h1>Interact with this Attendee</h1>
+  				<ul>
+  				  <li><a href="#" title="Pass [username] the baton">Pass the baton</a></li> <!-- Shown only when holding the baton, only on coders -->
+  				  <li><a href="#" title="Promote [username] to coder">Promote [username]</a></li> <!-- Shown to room owners, only no attendees -->
+  				  <li><a href="#" title="Demote [username] to attendee">Demote [username</a></li> <!-- Shown only to room owners, only on coders -->
+  				  <li><a href="#" title="Mute [username]">Mute [username]</a></li> <!-- Shown to all coders, only on attendees -->
+  				  <li><a href="#" title="Update Your Name">Update Your Username</a></li> <!-- Shown to anyone that is still using the "Guest" name -->
+  				</ul>
+  		  </section>
+			</li>
+	
+			<li class="attendee coder">
+				Coder
+				<section class="interact" title="Interact with this Attendee">
+				  <h1>Interact with this Attendee</h1>
+  				<ul>
+  				  <li><a href="#" title="Pass [username] the baton">Pass the baton</a></li> <!-- Shown only when holding the baton, only on coders -->
+  				  <li><a href="#" title="Promote [username] to coder">Promote [username]</a></li> <!-- Shown to room owners, only no attendees -->
+  				  <li><a href="#" title="Demote [username] to attendee">Demote [username</a></li> <!-- Shown only to room owners, only on coders -->
+  				  <li><a href="#" title="Mute [username]">Mute [username]</a></li> <!-- Shown to all coders, only on attendees -->
+  				  <li><a href="#" title="Update Your Name">Update Your Username</a></li> <!-- Shown to anyone that is still using the "Guest" name -->
+  				</ul>
+  		  </section>
 			</li>
 	
 			<li class="attendee coder baton">
-				Username
-				<a href="#" title="Interact with this Attendee">Interact with this Attendee</a>
+				Baton Holder
+				<section class="interact" title="Interact with this Attendee">
+				  <h1>Interact with this Attendee</h1>
+  				<ul>
+  				  <li><a href="#" title="Pass [username] the baton">Pass the baton</a></li> <!-- Shown only when holding the baton, only on coders -->
+  				  <li><a href="#" title="Promote [username] to coder">Promote [username]</a></li> <!-- Shown to room owners, only no attendees -->
+  				  <li><a href="#" title="Demote [username] to attendee">Demote [username</a></li> <!-- Shown only to room owners, only on coders -->
+  				  <li><a href="#" title="Mute [username]">Mute [username]</a></li> <!-- Shown to all coders, only on attendees -->
+  				  <li><a href="#" title="Update Your Name">Update Your Username</a></li> <!-- Shown to anyone that is still using the "Guest" name -->
+  				</ul>
+  		  </section>
 			</li>
 	
 			<li class="attendee">
-				Username
-				<a href="#" title="Interact with this Attendee">Interact with this Attendee</a>
+				Attendee
+				<section class="interact" title="Interact with this Attendee">
+				  <h1>Interact with this Attendee</h1>
+  				<ul>
+  				  <li><a href="#" title="Pass [username] the baton">Pass the baton</a></li> <!-- Shown only when holding the baton, only on coders -->
+  				  <li><a href="#" title="Promote [username] to coder">Promote [username]</a></li> <!-- Shown to room owners, only no attendees -->
+  				  <li><a href="#" title="Demote [username] to attendee">Demote [username</a></li> <!-- Shown only to room owners, only on coders -->
+  				  <li><a href="#" title="Mute [username]">Mute [username]</a></li> <!-- Shown to all coders, only on attendees -->
+  				  <li><a href="#" title="Update Your Name">Update Your Username</a></li> <!-- Shown to anyone that is still using the "Guest" name -->
+  				</ul>
+  		  </section>
+			</li>
+	
+			<li class="attendee">
+				Attendee
+				<section class="interact" title="Interact with this Attendee">
+				  <h1>Interact with this Attendee</h1>
+  				<ul>
+  				  <li><a href="#" title="Pass [username] the baton">Pass the baton</a></li> <!-- Shown only when holding the baton, only on coders -->
+  				  <li><a href="#" title="Promote [username] to coder">Promote [username]</a></li> <!-- Shown to room owners, only no attendees -->
+  				  <li><a href="#" title="Demote [username] to attendee">Demote [username</a></li> <!-- Shown only to room owners, only on coders -->
+  				  <li><a href="#" title="Mute [username]">Mute [username]</a></li> <!-- Shown to all coders, only on attendees -->
+  				  <li><a href="#" title="Update Your Name">Update Your Username</a></li> <!-- Shown to anyone that is still using the "Guest" name -->
+  				</ul>
+  		  </section>
+			</li>
+	
+			<li class="attendee">
+				Attendee
+				<section class="interact" title="Interact with this Attendee">
+				  <h1>Interact with this Attendee</h1>
+  				<ul>
+  				  <li><a href="#" title="Pass [username] the baton">Pass the baton</a></li> <!-- Shown only when holding the baton, only on coders -->
+  				  <li><a href="#" title="Promote [username] to coder">Promote [username]</a></li> <!-- Shown to room owners, only no attendees -->
+  				  <li><a href="#" title="Demote [username] to attendee">Demote [username</a></li> <!-- Shown only to room owners, only on coders -->
+  				  <li><a href="#" title="Mute [username]">Mute [username]</a></li> <!-- Shown to all coders, only on attendees -->
+  				  <li><a href="#" title="Update Your Name">Update Your Username</a></li> <!-- Shown to anyone that is still using the "Guest" name -->
+  				</ul>
+  		  </section>
 			</li>
 	
 		</ol>
@@ -172,6 +248,6 @@
 		</ol>
 	</nav>
 
-	<small><a href="/" title="Coding Stage's Front Door">Coding Stage</a> was built for 2011's <a href="http://nodeknockout.com/">Node Knockout</a> by <a href="http://chrisjpowers.com" title="Chris' website" rel="me">Chris J. Powers</a> (<a href="http://twitter.com/chrisjpowers" title="@chrisjpowers on Twitter" rel="me">@chrisjpowers</a>), <a href="http://benmillsdesigns.com" title="Ben's website" rel="me">Ben Mills</a> (<a href="http://twitter.com/benemills" title="@benemills on Twitter" rel="me">@benemills</a>), <a href="http://jeremyckahn.com" title="Jeremy's website" rel="me">Jeremy C. Kahn</a> (<a href="http://twitter.com/jeremyckahn" title="@jeremyckahn on Twitter" rel="me">@jeremyckahn</a>) & <a href="http://lovehasnologic.com" title="Mike's website" rel="me">Michael Gibson</a> (<a href="http://twitter.com/lovehasnologic" title="@lovehasnologic on Twitter" rel="me">@lovehasnologic</a>)</small>
+	<small><a href="/" title="Coding Stage's Front Door">Coding Stage</a> was built for 2011's <a href="http://nodeknockout.com/">Node Knockout</a> by <a href="http://chrisjpowers.com" title="Chris' website" rel="me">Chris J. Powers</a> (<a href="http://twitter.com/chrisjpowers" title="@chrisjpowers on Twitter" rel="me">@chrisjpowers</a>), <a href="http://benmillsdesigns.com" title="Ben's website" rel="me">Ben Mills</a> (<a href="http://twitter.com/benemills" title="@benemills on Twitter" rel="me">@benemills</a>), <a href="http://jeremyckahn.com" title="Jeremy's website" rel="me">Jeremy C. Kahn</a> (<a href="http://twitter.com/jeremyckahn" title="@jeremyckahn on Twitter" rel="me">@jeremyckahn</a>) & <a href="http://lovehasnologic.com" title="Mike's website" rel="me">Michael Gibson</a> (<a href="http://twitter.com/lovehasnologic" title="@lovehasnologic on Twitter" rel="me">@lovehasnologic</a>). Fugue iconset from <a href="http://www.pinvoke.com/">Yusuke Kamiyamane</a>.</small>
 	
 </footer>
