--- a/public/_/css/style.css
+++ b/public/_/css/style.css
@@ -437,15 +437,13 @@ a {
       padding: 4px 5px;
       position: relative;
       list-style-type: none;
-      color: #92ccbf;
-      -webkit-transition: all ease-in-out 0.2s;
-      -moz-transition: all ease-in-out 0.2s;
-      transition: all ease-in-out 0.2s; }
+      color: #92ccbf; }
       #attendees li:hover {
         background-color: #eef2f2;
         cursor: pointer; }
     #attendees li.attendee {
-      border-top: 1px solid #eef2f2; }
+      border-top: 1px solid #eef2f2;
+      text-shadow: 0 1px 0 white, 0 -1px 0 rgba(29, 41, 41, 0.5); }
       #attendees li.attendee ul {
         position: absolute;
         right: 0;
@@ -462,7 +460,8 @@ a {
           text-align: right;
           padding: 2px 5px; }
           #attendees li.attendee ul li a {
-            font-weight: normal; }
+            font-weight: normal;
+            text-shadow: none; }
             #attendees li.attendee ul li a:hover {
               background: none;
               cursor: pointer; }
