--- a/public/_/css/style.css
+++ b/public/_/css/style.css
@@ -26,10 +26,10 @@ body {
   font-size: 62.5%;
   /* Reset 1em to 10px */
   line-height: 1.3;
+  min-height: 100%;
+  background: url(../img/bg/noise.png) center top repeat, url(../img/logo/stamp.png) 90% 105% no-repeat #eef2f2;
   font-family: Univers, 'Helvetica Neue', Helmet, FreeSans, sans-serif;
-  font-weight: 500;
-  background: #eef2f2 url(../img/bg/noise.png) center top repeat;
-  min-height: 100%; }
+  font-weight: 500; }
 
 body, select, input, textarea {
   color: #1d2929; }
@@ -318,9 +318,9 @@ a {
     #conversation .coder strong {
       color: #4da4a4; }
     #conversation .owner strong {
-      color: #92d05c; }
-    #conversation .baton strong {
       color: #1d2929; }
+    #conversation .baton strong {
+      color: #92d05c; }
 
   #chat input[type="text"] {
     width: 80%;
@@ -498,13 +498,36 @@ a {
     #attendees .coder {
       color: #4da4a4; }
     #attendees .owner {
-      color: #92d05c; }
-    #attendees .baton {
       color: #1d2929; }
+    #attendees .baton {
+      color: #92d05c; }
 
   /* FOOTER */
   footer {
-    clear: both; }
+    clear: both;
+    padding: 10px 2.08033333%;
+    /* 10 & 20 / 960 */ }
+    footer nav li {
+      font-size: 1.2em;
+      float: left;
+      display: inline;
+      overflow: hidden;
+      margin-right: 1em; }
+      footer nav li a {
+        padding: 3px;
+        font-weight: 700;
+        text-transform: uppercase;
+        display: block;
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border-radius: 4px; }
+    footer small {
+      clear: both;
+      display: block;
+      color: #656c74;
+      font-size: 1em;
+      width: 62.5%;
+      /* 560 / 960 */ }
 
   /* TYPOGRAPHY */
   section h1 {
