--- a/public/_/sass/style.scss
+++ b/public/_/sass/style.scss
@@ -39,10 +39,6 @@ $mdgreen: #b6ec86;
   overflow: hidden;
 }
 
-@mixin bg($color) {
-  background: $color url(../img/bg/noise.png) center top repeat;
-}
-
 @mixin animate($time, $scope) {
   -webkit-transition: $scope ease-in-out $time;
   -moz-transition: $scope ease-in-out $time;
@@ -109,9 +105,9 @@ img::-moz-selection { background: transparent; }
 body {
   font-size: 62.5%; /* Reset 1em to 10px */
   line-height: 1.3;
-  @include sans(500);
-  @include bg($white);
   min-height: 100%;
+  background: url(../img/bg/noise.png) center top repeat, url(../img/logo/stamp.png) 90% 105% no-repeat $white;
+  @include sans(500);
 }
 
 body, select, input, textarea { color: $black; }
@@ -409,11 +405,11 @@ a{
     } 
 
     .owner strong {
-      color: $green;
+      color: $black;
     }
 
     .baton strong {
-      color: $black
+      color: $green;
     }
     
   }
@@ -595,11 +591,11 @@ a{
     } 
 
     .owner {
-      color: $green;
+      color: $black;
     }
 
     .baton {
-      color: $black
+      color: $green;
     }
     
   }
@@ -608,7 +604,31 @@ a{
   
   footer {
     clear: both;
+    padding: 10px 2.08033333%; /* 10 & 20 / 960 */
+    nav {
+      li {
+        font-size: 1.2em;
+        @include float(left);
+        margin-right: 1em;
+        a {
+          padding: 3px;
+          font-weight: 700;
+          text-transform: uppercase;
+          display: block;
+          @include rounded(4px);
+        }
+      }
+    }
+    small {
+      clear: both;
+      display: block;
+      color: $mdgray;
+      font-size: 1em;
+      width: 62.5%; /* 560 / 960 */ 
+    }
   }
+  
+  
   
   /* TYPOGRAPHY */
   
