--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -127,7 +127,7 @@
 	
 	<section id="attendees">
 		
-		<h1>Who's Watching <a href="#">Request The Baton</a></h1>
+		<h1>Who's Watching<br /><a href="#">Request The Baton</a></h1>
 		
 		<ol>
 	
