Narrow Viewport Responsive design
-Header all wrapped up
-Editor all wrapped up
-Chat about 50%

Signed-off-by: Mike Gibson <mike@lovehasnologic.com>

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,6 +1,7 @@
 <header>
 
 	<h1><a href="/" title="Coding Stage's Front Door">Coding Stage</a></h1>
+	<iframe src="http://nodeknockout.com/iframe/team-honey-badger" frameborder=0 scrolling=no allowtransparency=true width=115 height=25 class="vote"></iframe>
 
 	<nav>
 		<ol>
