--- a/public/_/css/style.css
+++ b/public/_/css/style.css
@@ -28,7 +28,7 @@ body {
   line-height: 1.3;
   min-height: 100%;
   background: url(../img/bg/noise.png) center top repeat, url(../img/logo/stamp.png) 90% 105% no-repeat #eef2f2;
-  font-family: Univers, 'Helvetica Neue', Helmet, FreeSans, sans-serif;
+  font-family: Helmet, FreeSans, sans-serif;
   font-weight: 500; }
 
 body, select, input, textarea {
@@ -38,6 +38,7 @@ a {
   text-decoration: none;
   color: #4da4a4; }
 
+/* HEADER */
 header {
   overflow: hidden;
   background-color: #4a525a;
@@ -52,13 +53,23 @@ header {
   background-image: url(../img/bg/noise.png), -o-linear-gradient(top, #656c74, #4a525a);
   /* Opera 11.10+ */
   background-image: url(../img/bg/noise.png), linear-gradient(top, #656c74, #4a525a);
-  font-family: Univers, 'Helvetica Neue', Helmet, FreeSans, sans-serif;
+  padding: 10px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #656c74;
+  -webkit-box-shadow: 0 1px 0 #1d2929;
+  -moz-box-shadow: 0 1px 0 #1d2929;
+  -o-box-shadow: 0 1px 0 #1d2929;
+  box-shadow: 0 1px 0 #1d2929;
+  font-family: Helmet, FreeSans, sans-serif;
   font-weight: 900; }
+
+.no-boxshadow header {
+  border-bottom: 2px solid #1d2929; }
 
 header h1 {
   width: 213px;
   height: 60px;
-  float: left; }
+  margin: 0 0 0 10px; }
   header h1 a {
     text-indent: -9999px;
     display: block;
@@ -74,6 +85,59 @@ header h1 {
       background-color: rgba(238, 242, 242, 0.25);
       border-top: 1px solid rgba(29, 41, 41, 0.75);
       color: #eef2f2; }
+
+header nav {
+  margin-top: 5px;
+  clear: both;
+  text-align: center; }
+
+header nav li {
+  display: inline-block;
+  padding: 1px;
+  margin: 0 5px; }
+
+.vote {
+  position: absolute;
+  top: 28px;
+  right: 10px; }
+
+header nav li a {
+  padding: 4px 5px 5px;
+  font-size: 1.2em;
+  color: #eef2f2;
+  opacity: 0.6;
+  text-transform: uppercase;
+  text-shadow: 0 -1px #1d2929;
+  display: block;
+  position: relative;
+  line-height: 1;
+  border-top: 1px solid transparent;
+  -webkit-transition: all ease-in-out 0.2s;
+  -moz-transition: all ease-in-out 0.2s;
+  transition: all ease-in-out 0.2s;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px; }
+  header nav li a:hover {
+    opacity: 1;
+    background: rgba(238, 242, 242, 0.25);
+    border-top: 1px solid rgba(29, 41, 41, 0.75);
+    color: #eef2f2; }
+
+/* TYPOGRAPHY */
+section h1 {
+  font-size: 2.8em;
+  color: #4da4a4;
+  text-transform: uppercase;
+  text-shadow: 0 -1px 1px rgba(29, 41, 41, 0.5), 0 1px 0 white;
+  line-height: 1;
+  font-family: ostrich-sans, Univers, 'Helvetica Neue', Helmet, sans-serif;
+  font-weight: 900; }
+
+aside h1 {
+  font-size: 2.6em;
+  color: #4a525a;
+  text-shadow: 0 1px 0 #eef2f2; }
 
 /* LINKS */
 a {
@@ -102,7 +166,7 @@ a {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  font-family: Univers, 'Helvetica Neue', Helmet, FreeSans, sans-serif;
+  font-family: Helmet, FreeSans, sans-serif;
   font-weight: 700;
   -webkit-transition: all ease-in-out 0.1s;
   -moz-transition: all ease-in-out 0.1s;
@@ -112,62 +176,130 @@ a {
     background-color: #92d05c;
     border-color: #92d05c; }
 
+/* ROOM */
+#room, #chat {
+  margin-bottom: 20px;
+  padding: 20px;
+  overflow: hidden;
+  position: relative; }
+
+#ace-editor {
+  width: 100% !important;
+  display: block;
+  position: relative;
+  height: 200px !important;
+  margin: 15px 0;
+  background: #fff;
+  border: 1px solid #d7d7b8; }
+
+#room {
+  background: rgba(255, 255, 255, 0.7);
+  margin-top: -20px; }
+
+.invite {
+  margin-top: 10px; }
+
+#room-settings label, #editor label {
+  font-size: 1.2em;
+  display: inline-block;
+  margin-right: .5em; }
+#room-settings select, #editor select {
+  margin-right: 1.5em;
+  width: 70%; }
+  #room-settings select option[data-file="file-new"], #editor select option[data-file="file-new"] {
+    font-style: italic; }
+#room-settings .import, #editor .import {
+  margin-top: 10px; }
+
+#room-settings {
+  margin: 0; }
+  #room-settings legend {
+    display: none; }
+  #room-settings input, #room-settings label {
+    margin-top: 1em; }
+  #room-settings input[type="text"] {
+    width: 40px;
+    position: relative;
+    top: -7px;
+    margin-right: 1em; }
+  #room-settings input {
+    margin-right: 1.5em; }
+  #room-settings input[type="submit"] {
+    background: transparent;
+    border: 0;
+    padding: 0;
+    text-shadow: none;
+    color: #4da4a4;
+    font-weight: 500;
+    margin-top: -5px;
+    -webkit-transition: all ease-in-out 0.2s;
+    -moz-transition: all ease-in-out 0.2s;
+    transition: all ease-in-out 0.2s; }
+    #room-settings input[type="submit"]:hover {
+      color: #4a525a; }
+  #room-settings label {
+    margin-right: 0.5em; }
+
+/* ACE HAMMERS */
+.ace_gutter {
+  width: 7.1428571428571% !important;
+  /* 50 / 560 */ }
+
+.ace_scroller {
+  width: 89.2857142857143% !important;
+  /* 500 / 560 */ }
+
+.ace_content {
+  width: 100% !important; }
+
+/* CHAT */
+#chat {
+  background: #eef2f2;
+  background: rgba(255, 255, 255, 0.7);
+  padding: 20px;
+  /* 20 / 560 */
+  margin-top: -20px;
+  border-top: 2px solid #656c74;
+  border-bottom: 2px solid #656c74; }
+
 /* MEDIA QUERIES
 -------------------------------------------------------------------------------*/
-/*/mediaquery*/
-/*/mediaquery*/
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 480px) {
   /* HEADER */
   header {
     padding: 10px 2.08033333%;
     /* 10 & 20 / 960 */
-    margin-bottom: 20px;
     width: 95.833333%;
-    /* 920 / 960 */
-    border-bottom: 1px solid #656c74;
-    -webkit-box-shadow: 0 1px 0 #1d2929;
-    -moz-box-shadow: 0 1px 0 #1d2929;
-    -o-box-shadow: 0 1px 0 #1d2929;
-    box-shadow: 0 1px 0 #1d2929; }
+    /* 920 / 960 */ }
 
-  .no-boxshadow header {
-    border-bottom: 2px solid #1d2929; }
-
+  header h1 {
+    float: left;
+    margin: 0; } }
+/*/mediaquery*/
+@media screen and (min-width: 600px) {
+  header nav li a {
+    font-size: 1.3em; } }
+/*/mediaquery*/
+@media screen and (min-width: 768px) {
+  /* HEADER */
   header nav {
     float: right;
     display: inline;
     overflow: hidden;
-    margin-top: 15px; }
+    text-align: left;
+    clear: none;
+    margin-top: 30px; }
 
   header nav li {
     float: left;
     display: inline;
-    overflow: hidden;
-    padding: 1px;
-    margin: 0 5px; }
+    overflow: hidden; }
 
   header nav li a {
-    padding: 6px 5px 8px;
-    font-size: 1.4em;
-    color: #eef2f2;
-    opacity: 0.6;
-    text-transform: uppercase;
-    text-shadow: 0 -1px #1d2929;
-    display: block;
-    position: relative;
-    line-height: 1;
-    border-top: 1px solid transparent;
-    -webkit-transition: all ease-in-out 0.2s;
-    -moz-transition: all ease-in-out 0.2s;
-    transition: all ease-in-out 0.2s;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px; }
-    header nav li a:hover {
-      opacity: 1;
-      background: rgba(238, 242, 242, 0.25);
-      border-top: 1px solid rgba(29, 41, 41, 0.75);
-      color: #eef2f2; }
+    font-size: 1.4em; }
+
+  .vote {
+    top: 11px; }
 
   /* COLUMNS */
   #main {
@@ -191,23 +323,14 @@ a {
 
   /* PAGE COMPONENTS */
   #room, #chat {
-    margin-bottom: 20px;
     padding: 2.6785714285714% 3.5714286%;
-    /* 20 / 560 */
-    overflow: hidden;
-    position: relative; }
+    /* 20 / 560 */ }
 
   #ace-editor {
-    width: 100% !important;
-    display: block;
-    position: relative;
-    height: 300px !important;
-    margin: 15px 0;
-    background: #fff;
-    border: 1px solid #d7d7b8; }
+    height: 300px !important; }
 
   #room {
-    background: rgba(255, 255, 255, 0.7);
+    margin-top: 0;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     border-radius: 6px;
@@ -219,10 +342,10 @@ a {
     margin-bottom: 20px; }
 
   #chat {
-    background: #eef2f2;
-    background: rgba(255, 255, 255, 0.7);
     padding: 2.6785714285714% 3.5714286%;
     /* 20 / 560 */
+    margin-top: 0;
+    border-top: 0;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px; }
@@ -231,25 +354,21 @@ a {
   .invite {
     position: absolute;
     top: 4.1%;
-    right: 3.5714286%; }
+    right: 3.5714286%;
+    margin-top: 0; }
 
-  #room-settings label, #editor label {
-    font-size: 1.2em;
-    display: inline-block;
-    margin-right: .5em; }
   #room-settings select, #editor select {
-    margin-right: 1.5em;
     width: 50%; }
-    #room-settings select option[data-file="file-new"], #editor select option[data-file="file-new"] {
-      font-style: italic; }
   #room-settings .import, #editor .import {
     float: right;
     display: inline;
-    overflow: hidden; }
+    overflow: hidden;
+    margin-top: 0; }
 
   #room-settings {
-    margin: .5em 0 0; }
+    margin: 0.5em 0 0; }
     #room-settings legend {
+      display: inline-block;
       color: #b7bcc2;
       font-size: 1.2em;
       font-weight: 700;
@@ -265,42 +384,9 @@ a {
     #room-settings legend.open {
       background-position: 100% -25px; }
     #room-settings input, #room-settings label {
-      display: none;
-      margin-top: 1em; }
-    #room-settings input[type="text"] {
-      width: 40px;
-      position: relative;
-      top: -7px;
-      margin-right: 1em; }
-    #room-settings input {
-      margin-right: 1.5em; }
-    #room-settings input[type="submit"] {
-      background: transparent;
-      border: 0;
-      padding: 0;
-      text-shadow: none;
-      color: #4da4a4;
-      font-weight: 500;
-      margin-top: 0;
-      -webkit-transition: all ease-in-out 0.2s;
-      -moz-transition: all ease-in-out 0.2s;
-      transition: all ease-in-out 0.2s; }
-      #room-settings input[type="submit"]:hover {
-        color: #4a525a; }
+      display: none; }
     #room-settings label {
-      margin-right: 0.5em; }
-
-  /* ACE HAMMERS */
-  .ace_gutter {
-    width: 7.1428571428571% !important;
-    /* 50 / 560 */ }
-
-  .ace_scroller {
-    width: 89.2857142857143% !important;
-    /* 500 / 560 */ }
-
-  .ace_content {
-    width: 100% !important; }
+      line-height: 2.4; }
 
   /* TEXT CHAT */
   #conversation {
@@ -348,7 +434,7 @@ a {
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    font-family: Univers, 'Helvetica Neue', Helmet, FreeSans, sans-serif;
+    font-family: Helmet, FreeSans, sans-serif;
     font-weight: 700;
     -webkit-transition: all ease-in-out 0.1s;
     -moz-transition: all ease-in-out 0.1s;
@@ -422,7 +508,7 @@ a {
       -webkit-border-radius: 4px;
       -moz-border-radius: 4px;
       border-radius: 4px;
-      font-family: Univers, 'Helvetica Neue', Helmet, FreeSans, sans-serif;
+      font-family: Helmet, FreeSans, sans-serif;
       font-weight: 500;
       float: left;
       display: inline;
@@ -530,22 +616,7 @@ a {
       color: #656c74;
       font-size: 1em;
       width: 62.5%;
-      /* 560 / 960 */ }
-
-  /* TYPOGRAPHY */
-  section h1 {
-    font-size: 2.8em;
-    color: #4da4a4;
-    text-transform: uppercase;
-    text-shadow: 0 -1px 1px rgba(29, 41, 41, 0.5), 0 1px 0 white;
-    line-height: 1;
-    font-family: ostrich-sans, Univers, 'Helvetica Neue', Helmet, sans-serif;
-    font-weight: 900; }
-
-  aside h1 {
-    font-size: 2.6em;
-    color: #4a525a;
-    text-shadow: 0 1px 0 #eef2f2; } }
+      /* 560 / 960 */ } }
 /*/mediaquery*/
 @media screen and (min-width: 1024px) {
   /* COLUMNS */
@@ -608,7 +679,13 @@ a {
     margin-right: 0%; }
   #chat input[type="submit"] {
     width: auto;
-    margin-top: 10px; } }
+    margin-top: 10px; }
+
+  footer nav {
+    font-size: 1.2em; }
+  footer small {
+    width: 52%;
+    font-size: 1.1em; } }
 /*/mediaquery*/
 /*- BROWSER PATCHES
 ----------------------------------------------------------------------*/
