--- a/public/_/sass/style.scss
+++ b/public/_/sass/style.scss
@@ -19,7 +19,7 @@ $green50: rgba(146,208,92,0.5);
 $mdgreen: #b6ec86;
 
 @mixin sans($weight) {
-  font-family: Univers, 'Helvetica Neue', Helmet, FreeSans, sans-serif;
+  font-family: Helmet, FreeSans, sans-serif;
   font-weight: $weight;
 }
 
@@ -113,6 +113,8 @@ body {
 body, select, input, textarea { color: $black; }
 a { text-decoration: none; color: $turq; }
 
+/* HEADER */
+
 header {
   overflow: hidden;
   background-color: $dkgray;
@@ -122,13 +124,24 @@ header {
   background-image:     url(../img/bg/noise.png), -ms-linear-gradient(top, $mdgray, $dkgray); /* IE10 */
   background-image:      url(../img/bg/noise.png), -o-linear-gradient(top, $mdgray, $dkgray); /* Opera 11.10+ */
   background-image:         url(../img/bg/noise.png), linear-gradient(top, $mdgray, $dkgray);
+  padding: 10px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid $mdgray;
+  -webkit-box-shadow: 0 1px 0 $black;
+  -moz-box-shadow: 0 1px 0 $black;
+  -o-box-shadow: 0 1px 0 $black;
+  box-shadow: 0 1px 0 $black;
   @include sans(900);
+}
+
+.no-boxshadow header {
+  border-bottom: 2px solid $black;
 }
 
 header h1 {
   width: 213px;
   height: 60px;
-  float: left;
+  margin: 0 0 0 10px;
   a {
     text-indent: -9999px;
     display: block;
@@ -146,6 +159,62 @@ header h1 {
   }
 }
 
+header nav {
+  margin-top: 5px;
+  clear: both;
+  text-align: center;
+}
+
+header nav li {
+  display: inline-block;
+  padding: 1px;
+  margin: 0 5px;
+}
+
+.vote {
+  position: absolute;
+  top: 28px;
+  right: 10px;
+}
+
+header nav li a {
+  padding: 4px 5px 5px;
+  font-size: 1.2em;
+  color: $white;
+  opacity: 0.6;
+  text-transform: uppercase;
+  text-shadow: 0 -1px $black;
+  display: block;
+  position: relative;
+  line-height: 1;
+  border-top: 1px solid transparent;
+  @include animate(0.2s, all);
+  @include rounded(4px);
+  &:hover {
+    opacity: 1;
+    background: $white25;
+    border-top: 1px solid $black75;
+    color: $white;
+  }
+}
+
+/* TYPOGRAPHY */
+
+section h1 {
+  font-size: 2.8em;
+  color: $turq;
+  text-transform: uppercase;
+  text-shadow: 0 -1px 1px $black50, 0 1px 0 #fff;
+  line-height: 1;
+  @include display(900);
+}
+
+aside h1 {
+  font-size: 2.6em;
+  color: $dkgray;
+  text-shadow: 0 1px 0 $white;
+}
+  
 /* LINKS */
 
 a{
@@ -162,6 +231,119 @@ a{
   @include button;
 }
 
+/* ROOM */
+
+#room, #chat {
+  margin-bottom: 20px;
+  padding: 20px;
+  overflow: hidden;
+  position: relative;
+}
+
+#ace-editor {
+  width: 100% !important;
+  display: block;
+  position: relative;
+  height: 200px !important;
+  margin: 15px 0;
+  background: #fff;
+  border: 1px solid $beige;
+}
+
+#room {
+  background: rgba(255,255,255,.7);
+  margin-top: -20px;
+}
+
+.invite {
+  margin-top: 10px;
+}
+
+#room-settings, #editor {
+
+  label { 
+    font-size: 1.2em;
+    display: inline-block;
+    margin-right: .5em;
+  }
+
+  select {
+    margin-right: 1.5em;
+    width: 70%;
+    
+    option[data-file="file-new"] {
+      font-style: italic;
+    }
+    
+  }
+
+  .import {
+    margin-top: 10px;
+  }
+
+}
+
+#room-settings {
+  margin: 0;
+  legend {
+    display: none;
+  }
+  input, label {
+    margin-top: 1em;
+  }
+  input[type="text"] {
+    width: 40px;
+    position: relative;
+    top: -7px;
+    margin-right: 1em;
+  }
+  input { 
+    margin-right: 1.5em;
+  }
+  input[type="submit"] {
+    background: transparent;
+    border: 0;
+    padding: 0;
+    text-shadow: none;
+    color: $turq;
+    font-weight: 500;
+    margin-top: -5px;
+    @include animate(0.2s, all);
+    &:hover {
+      color: $dkgray;
+    }
+  }
+  label {
+    margin-right: 0.5em;
+  }
+}
+
+/* ACE HAMMERS */
+
+.ace_gutter {
+width: 7.1428571428571% !important; /* 50 / 560 */
+}
+
+.ace_scroller {
+width: 89.2857142857143% !important; /* 500 / 560 */
+}
+
+.ace_content {
+width: 100% !important;
+}
+
+/* CHAT */
+
+#chat {
+  background: $white;
+  background: rgba(255,255,255,.7);
+  padding: 20px; /* 20 / 560 */
+  margin-top: -20px;
+  border-top: 2px solid $mdgray;
+  border-bottom: 2px solid $mdgray;
+}
+  
+
 
 
 
@@ -172,63 +354,51 @@ a{
 
 @media screen and (min-width: 480px) {
 
+  /* HEADER */
+  
+  header {
+    padding: 10px 2.08033333%; /* 10 & 20 / 960 */
+    width: 95.833333%; /* 920 / 960 */
+  }
+  
+  header h1 {
+    float: left;
+    margin: 0;
+  }
+    
 }/*/mediaquery*/
 
 @media screen and (min-width: 600px) {
+
+  header nav li a {
+    font-size: 1.3em;
+  }
   
 }/*/mediaquery*/
 
 @media screen and (min-width: 768px) {
   
   /* HEADER */
-  
-  header {
-    padding: 10px 2.08033333%; /* 10 & 20 / 960 */
-    margin-bottom: 20px;
-    width: 95.833333%; /* 920 / 960 */
-    border-bottom: 1px solid $mdgray;
-    -webkit-box-shadow: 0 1px 0 $black;
-    -moz-box-shadow: 0 1px 0 $black;
-    -o-box-shadow: 0 1px 0 $black;
-    box-shadow: 0 1px 0 $black;
-  }
-  
-  .no-boxshadow header {
-    border-bottom: 2px solid $black;
-  }
-  
+
   header nav {
     @include float(right);
-    margin-top: 15px;
+    text-align: left;
+    clear: none;
+    margin-top: 30px;
   }
   
   header nav li {
     @include float(left);
-    padding: 1px;
-    margin: 0 5px;
+  }
+
+  header nav li a {
+    font-size: 1.4em;
   }
   
-  header nav li a {
-    padding: 6px 5px 8px;
-    font-size: 1.4em;
-    color: $white;
-    opacity: 0.6;
-    text-transform: uppercase;
-    text-shadow: 0 -1px $black;
-    display: block;
-    position: relative;
-    line-height: 1;
-    border-top: 1px solid transparent;
-    @include animate(0.2s, all);
-    @include rounded(4px);
-    &:hover {
-      opacity: 1;
-      background: $white25;
-      border-top: 1px solid $black75;
-      color: $white;
-    }
+  .vote {
+    top: 11px;
   }
-    
+  
   /* COLUMNS */
   
   #main {
@@ -247,24 +417,15 @@ a{
   /* PAGE COMPONENTS */
   
   #room, #chat {
-    margin-bottom: 20px;
     padding: 2.6785714285714% 3.5714286%; /* 20 / 560 */
-    overflow: hidden;
-    position: relative;
   }
   
   #ace-editor {
-    width: 100% !important;
-    display: block;
-    position: relative;
     height: 300px !important;
-    margin: 15px 0;
-    background: #fff;
-    border: 1px solid $beige;
   }
   
   #room {
-    background: rgba(255,255,255,.7);
+    margin-top: 0;
     @include rounded(6px);
     @include insetshadow;
   }
@@ -275,9 +436,9 @@ a{
   }
 
   #chat {
-    background: $white;
-    background: rgba(255,255,255,.7);
     padding: 2.6785714285714% 3.5714286%; /* 20 / 560 */
+    margin-top: 0;
+    border-top: 0;
     @include rounded(10px);
   }
   
@@ -287,35 +448,26 @@ a{
       position: absolute;
       top: 4.1%;
       right: 3.5714286%;
+      margin-top: 0;
     }
     
     #room-settings, #editor {
 
-      label { 
-        font-size: 1.2em;
-        display: inline-block;
-        margin-right: .5em;
-      }
-
       select {
-        margin-right: 1.5em;
         width: 50%;
-        
-        option[data-file="file-new"] {
-          font-style: italic;
-        }
-        
       }
 
       .import {
         @include float(right);
+        margin-top: 0;
       }
 
     }
     
     #room-settings {
-      margin: .5em 0 0;
+      margin: 0.5em 0 0;
       legend {
+        display: inline-block;
         color: $ltgray;
         font-size: 1.2em;
         font-weight: 700;
@@ -333,49 +485,11 @@ a{
       }
       input, label {
         display: none;
-        margin-top: 1em;
-      }
-      input[type="text"] {
-        width: 40px;
-        position: relative;
-        top: -7px;
-        margin-right: 1em;
-      }
-      input { 
-        margin-right: 1.5em;
-      }
-      input[type="submit"] {
-        background: transparent;
-        border: 0;
-        padding: 0;
-        text-shadow: none;
-        color: $turq;
-        font-weight: 500;
-        margin-top: 0;
-        @include animate(0.2s, all);
-        &:hover {
-          color: $dkgray;
-        }
       }
       label {
-        margin-right: 0.5em;
+        line-height: 2.4;
       }
     }
-  
-  /* ACE HAMMERS */
-  
-  .ace_gutter {
-    width: 7.1428571428571% !important; /* 50 / 560 */
-  }
-  
-  .ace_scroller {
-    width: 89.2857142857143% !important; /* 500 / 560 */
-  }
-  
-  .ace_content {
-    width: 100% !important;
-  }
-
   /* TEXT CHAT */
   
   #conversation {
@@ -631,25 +745,6 @@ a{
     }
   }
   
-  
-  
-  /* TYPOGRAPHY */
-  
-  section h1 {
-    font-size: 2.8em;
-    color: $turq;
-    text-transform: uppercase;
-    text-shadow: 0 -1px 1px $black50, 0 1px 0 #fff;
-    line-height: 1;
-    @include display(900);
-  }
-  
-  aside h1 {
-    font-size: 2.6em;
-    color: $dkgray;
-    text-shadow: 0 1px 0 $white;
-  }
-  
 }/*/mediaquery*/
 
 @media screen and (min-width: 1024px) {
@@ -727,6 +822,16 @@ a{
       margin-top: 10px;
     }
 
+  }
+  
+  footer {
+    nav {
+      font-size: 1.2em;
+    }
+    small {
+      width: 52%;
+      font-size: 1.1em;
+    }
   }
   
 }/*/mediaquery*/
